// Vitest Snapshot v1

exports[`allows custom focus class 1`] = `
"<pre class=\\"shiki nord has-focused-lines\\" style=\\"background-color: #2e3440ff\\"><code><span class=\\"line\\"></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">		</span><span style=\\"color: #81A1C1\\">function</span><span style=\\"color: #ECEFF4\\">()</span><span style=\\"color: #D8DEE9FF\\"> </span><span style=\\"color: #ECEFF4\\">{</span></span>
<span class=\\"line is-focused\\"><span style=\\"color: #D8DEE9FF\\">			</span><span style=\\"color: #D8DEE9\\">console</span><span style=\\"color: #ECEFF4\\">.</span><span style=\\"color: #88C0D0\\">log</span><span style=\\"color: #D8DEE9FF\\">(</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #A3BE8C\\">owo</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #D8DEE9FF\\">) </span></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">		</span><span style=\\"color: #ECEFF4\\">}</span></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">	</span></span></code></pre>"
`;

exports[`allows custom focused lines class 1`] = `
"<pre class=\\"shiki nord contains-focused-lines\\" style=\\"background-color: #2e3440ff\\"><code><span class=\\"line\\"></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">		</span><span style=\\"color: #81A1C1\\">function</span><span style=\\"color: #ECEFF4\\">()</span><span style=\\"color: #D8DEE9FF\\"> </span><span style=\\"color: #ECEFF4\\">{</span></span>
<span class=\\"line has-focus\\"><span style=\\"color: #D8DEE9FF\\">			</span><span style=\\"color: #D8DEE9\\">console</span><span style=\\"color: #ECEFF4\\">.</span><span style=\\"color: #88C0D0\\">log</span><span style=\\"color: #D8DEE9FF\\">(</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #A3BE8C\\">owo</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #D8DEE9FF\\">) </span></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">		</span><span style=\\"color: #ECEFF4\\">}</span></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">	</span></span></code></pre>"
`;

exports[`allows custom tags 1`] = `
"<pre class=\\"shiki nord has-focused-lines\\" style=\\"background-color: #2e3440ff\\"><code><span class=\\"line\\"></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">		</span><span style=\\"color: #81A1C1\\">function</span><span style=\\"color: #ECEFF4\\">()</span><span style=\\"color: #D8DEE9FF\\"> </span><span style=\\"color: #ECEFF4\\">{</span></span>
<span class=\\"line has-focus\\"><span style=\\"color: #D8DEE9FF\\">			</span><span style=\\"color: #D8DEE9\\">console</span><span style=\\"color: #ECEFF4\\">.</span><span style=\\"color: #88C0D0\\">log</span><span style=\\"color: #D8DEE9FF\\">(</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #A3BE8C\\">owo</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #D8DEE9FF\\">) </span></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">		</span><span style=\\"color: #ECEFF4\\">}</span></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">	</span></span></code></pre>"
`;

exports[`generates focused lines on the same line as the tag 1`] = `
"<pre class=\\"shiki nord has-focused-lines\\" style=\\"background-color: #2e3440ff\\"><code><span class=\\"line\\"></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">		</span><span style=\\"color: #81A1C1\\">function</span><span style=\\"color: #ECEFF4\\">()</span><span style=\\"color: #D8DEE9FF\\"> </span><span style=\\"color: #ECEFF4\\">{</span></span>
<span class=\\"line has-focus\\"><span style=\\"color: #D8DEE9FF\\">			</span><span style=\\"color: #D8DEE9\\">console</span><span style=\\"color: #ECEFF4\\">.</span><span style=\\"color: #88C0D0\\">log</span><span style=\\"color: #D8DEE9FF\\">(</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #A3BE8C\\">owo</span><span style=\\"color: #ECEFF4\\">&#39;</span><span style=\\"color: #D8DEE9FF\\">) </span></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">		</span><span style=\\"color: #ECEFF4\\">}</span></span>
<span class=\\"line\\"><span style=\\"color: #D8DEE9FF\\">	</span></span></code></pre>"
`;
